# backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix
.github/workflows/: docker.yml
src/: auth.rs  config.rs  converter.rs  main.rs  model.rs  models.rs  storage.rs
static/: 404.html  welcome.html
