[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-session = "0.6.2"
actix-cors = "0.6.1"
actix-multipart = "0.4.0"

futures-util = { version = "0.3.21", default-features = false, features = ["std"] }

env_logger = "0.9.0"
log = "0.4.16"

meilisearch-sdk = "0.16.0"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
base64-serde = "0.6.1"

uuid = { version = "1.0.0", features = ["serde", "v4"] }

image = "0.24.1"
webp = "0.2.2"

anyhow = "1.0.56"

base64 = "0.13.0"
