[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-session = "0.6.2"
actix-cors = "0.6.1"
actix-multipart = "0.4.0"

futures-util = { version = "0.3.21", default-features = false, features = ["std"] }

reqwest = "0.11.11"

env_logger = "0.9.0"
log = "0.4.17"

meilisearch-sdk = "0.17.0"
once_cell = "1.13.0"
serde = { version = "1.0.138", features = ["derive"] }
base64-serde = "0.6.1"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

image = "0.24.2"
webp = "0.2.2"

anyhow = "1.0.58"

base64 = "0.13.0"
