[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-session = "0.7"
actix-cors = "0.6"
actix-multipart = "0.5"

futures-util = { version = "0.3", default-features = false, features = ["std"] }

reqwest = "0.11"

env_logger = "0.10"
log = "0.4"

meilisearch-sdk = "0.17.0"
once_cell = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
base64-serde = "0.6"

uuid = { version = "1.3", features = ["serde", "v4"] }

image = "0.24"
webp = "0.2.2"

anyhow = "1.0"

base64 = "0.13"
